--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <com.charlesma.elebtn.viewbtn.EleAddView
+        android:id="@+id/btn1"
+        android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:circle_model="true" />
 
-</android.support.constraint.ConstraintLayout>
+    <com.charlesma.elebtn.viewbtn.EleAddView
+        android:id="@+id/btn3"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/btn1"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:circle_model="true" />
+
+    <com.charlesma.elebtn.viewbtn.EleAddView
+        android:id="@+id/btn4"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/btn3"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:circle_model="true" />
+
+    <com.charlesma.elebtn.viewbtn.EleAddView
+        android:id="@+id/btn2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        app:circle_model="false" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:background="#edb47b">
+
+        <TextView
+            android:id="@+id/tv_target"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:text="我就是落点(点我去列表页面看完整用法，这里只用来调试)"
+            android:textColor="#fff"
+            android:textSize="17sp" />
+    </RelativeLayout>
+
+</RelativeLayout>
